--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="row mb-5">
     <div class="col-md-8 offset-md-2 text-center">
-        <h1 class="display-4 mb-4">Welcome to HIRE Platform</h1>
+        <h1 class="display-4 mb-4">Welcome to HIRE</h1>
         <p class="lead">Connecting residential service customers with qualified service providers</p>
         <p class="mb-4">Find trusted professionals for all your household maintenance needs</p>
         
