--- a/templates/customer/add_address.html
+++ b/templates/customer/add_address.html
@@ -12,7 +12,7 @@
 <div class="row">
     <div class="col-md-8 offset-md-2">
         <div class="card">
-            <div class="card-header bg-primary text-white">
+            <div class="card-header">
                 <h4 class="card-title mb-0">Add New Address</h4>
             </div>
             <div class="card-body">
