--- a/templates/customer/register.html
+++ b/templates/customer/register.html
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-md-8 offset-md-2">
         <div class="card">
-            <div class="card-header bg-primary text-white">
+            <div class="card-header">
                 <h4 class="card-title mb-0">Customer Registration</h4>
             </div>
             <div class="card-body">
