--- a/templates/provider/login.html
+++ b/templates/provider/login.html
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-md-6 offset-md-3">
         <div class="card">
-            <div class="card-header bg-primary text-white">
+            <div class="card-header">
                 <h4 class="card-title mb-0">Provider Login</h4>
             </div>
             <div class="card-body">
