--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,7 @@
     <!-- Footer -->
     <footer class="footer mt-auto py-3">
         <div class="container text-center">
-            <span class="text-muted">© 2025 HIRE Platform - DBS MSc Cyber Security Project</span>
+            <span class="text-muted">© 2025 HIRE - DBS MSc Cyber Security Project by Anish Pimple (20059712) and Dhathri Vishwanath (20062834)</span>
         </div>
     </footer>
 
