--- a/static/css/style.css
+++ b/static/css/style.css
@@ -294,6 +294,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .footer .text-muted {
     color: rgba(0, 0, 0, 0.5) !important;
+    font-size: smaller;
 }
 
 /* Animations */
