--- a/templates/customer/add_address.html
+++ b/templates/customer/add_address.html
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     
-                    <!-- Hidden fields for coordinates -->
+                    <!-- Hidden fields for coordinatesss -->
                     <input type="hidden" id="latitude" name="latitude">
                     <input type="hidden" id="longitude" name="longitude">
                     
