--- a/templates/payment/process.html
+++ b/templates/payment/process.html
@@ -25,7 +25,7 @@
                         <label for="payment_method" class="form-label">Payment Method</label>
                         <select class="form-select" id="payment_method" name="payment_method" required>
                             <option value="" selected disabled>Select payment method</option>
-                            <option value="credit_card">Credit Card</option>
+                            <option value="credit_card">Cr!"Card</option>
                             <option value="debit_card">Debit Card</option>
                             <option value="paypal">PayPal</option>
                             <option value="bank_transfer">Bank Transfer</option>
@@ -97,7 +97,7 @@
                 <hr>
                 <div class="d-flex justify-content-between">
                     <span><strong>Amount:</strong></span>
-                    <span>${{ amount }}</span>
+                    <span>€{{ amount }}</span>
                 </div>
             </div>
         </div>
