--- a/templates/booking/detail.html
+++ b/templates/booking/detail.html
@@ -93,7 +93,7 @@
                         </div>
                         <div class="col-md-4">
                             <p class="text-muted mb-0">Amount</p>
-                            <p class="fw-bold">${{ booking.payment.amount }}</p>
+                            <p class="fw-bold">€{{ booking.payment.amount }}</p>
                         </div>
                     </div>
                 {% endif %}
